@startuml nozo_blog_go_api

entity users {
  *user_id(pk)
  --
  username
  email
}

entity articles {
  *article_id(pk)
  --
  title
  content
  published_at
  external_url
  tags
  author_id
  topic_id
}

entity topics {
  *topic_id(pk)
  --
  name
  description
}

entity article_tags {
  article_id(pk)
  name(pk)
}

entity tags {
  tag_id(pk)
  name
}

users o--o{ articles
topics o--o{ articles
articles o--o{ article_tags

@enduml
